==> kentahikaru/NetClock/lib/Driver/BSP/STM32746G-Discovery_SPL/stm32746g_discovery_lcd.c <==
#include "stm32746g_discovery_lcd.h"
#include "../../../Utilities/Fonts/fonts.h"
#include "../../../Utilities/Fonts/font24.c"
#include "../../../Utilities/Fonts/font20.c"
#include "../../../Utilities/Fonts/font16.c"
#include "../../../Utilities/Fonts/font12.c"
#include "../../../Utilities/Fonts/font8.c"
#define POLY_X(Z)              ((int32_t)((Points + Z)->X))
#define POLY_Y(Z)              ((int32_t)((Points + Z)->Y))
#define ABS(X)  ((X) > 0 ? (X) : -(X))

uint8_t BSP_LCD_Init(void)
{
  int i;
  
  /* Enable the LTDC and DMA2D clocks */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_LTDC, ENABLE);
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2D, ENABLE); 
  
  /* Select the used LCD */

  /* The RK043FN48H LCD 480x272 is selected */
  /* Timing configuration */
  /* Configure horizontal synchronization width */
  hLtdcHandler.LTDC_InitStruct.LTDC_HorizontalSync = (RK043FN48H_HSYNC - 1);
  /* Configure vertical synchronization height */
  hLtdcHandler.LTDC_InitStruct.LTDC_VerticalSync = (RK043FN48H_VSYNC - 1);
  /* Configure accumulated horizontal back porch */
  hLtdcHandler.LTDC_InitStruct.LTDC_AccumulatedHBP = (RK043FN48H_HSYNC + RK043FN48H_HBP - 1);
  /* Configure accumulated vertical back porch */
  hLtdcHandler.LTDC_InitStruct.LTDC_AccumulatedVBP = (RK043FN48H_VSYNC + RK043FN48H_VBP - 1); 
  /* Configure accumulated active width */
  hLtdcHandler.LTDC_InitStruct.LTDC_AccumulatedActiveW = (RK043FN48H_WIDTH + RK043FN48H_HSYNC + RK043FN48H_HBP - 1);
  /* Configure accumulated active height */
  hLtdcHandler.LTDC_InitStruct.LTDC_AccumulatedActiveH = (RK043FN48H_HEIGHT + RK043FN48H_VSYNC + RK043FN48H_VBP - 1);
  /* Configure total width */
  hLtdcHandler.LTDC_InitStruct.LTDC_TotalWidth = (RK043FN48H_WIDTH + RK043FN48H_HSYNC + RK043FN48H_HBP + RK043FN48H_HFP - 1);
  /* Configure total height */
  hLtdcHandler.LTDC_InitStruct.LTDC_TotalHeigh = (RK043FN48H_HEIGHT + RK043FN48H_VSYNC + RK043FN48H_VBP + RK043FN48H_VFP - 1);
  
  /* LCD clock configuration */
  BSP_LCD_ClockConfig(&hLtdcHandler, 0);

  /* Initialize the LCD pixel width and pixel height */
  for( i = 0; i < MAX_LAYER_NUMBER; i++ )
  {
    hLtdcHandler.ImageWidth[i]  = RK043FN48H_WIDTH;
    hLtdcHandler.ImageHeight[i] = RK043FN48H_HEIGHT;
  }
  
  /* Background value */
  hLtdcHandler.LTDC_InitStruct.LTDC_BackgroundRedValue = 0;            
  hLtdcHandler.LTDC_InitStruct.LTDC_BackgroundGreenValue = 0;          
  hLtdcHandler.LTDC_InitStruct.LTDC_BackgroundBlueValue = 0; 
  
  /* Polarity */
  /* Initialize the horizontal synchronization polarity as active low*/
  hLtdcHandler.LTDC_InitStruct.LTDC_HSPolarity = LTDC_HSPolarity_AL;     
  /* Initialize the vertical synchronization polarity as active low */  
  hLtdcHandler.LTDC_InitStruct.LTDC_VSPolarity = LTDC_VSPolarity_AL;     
  /* Initialize the data enable polarity as active low */ 
  hLtdcHandler.LTDC_InitStruct.LTDC_DEPolarity = LTDC_DEPolarity_AL;     
  /* Initialize the pixel clock polarity as input pixel clock */
  hLtdcHandler.LTDC_InitStruct.LTDC_PCPolarity = LTDC_PCPolarity_IPC;
  
  hLtdcHandler.Instance = LTDC;
  
  /* Initialize the LCD Msp: this __weak function can be rewritten by the application */
  BSP_LCD_MspInit(&hLtdcHandler, 0);
  
  LTDC_Init(&hLtdcHandler.LTDC_InitStruct);

  /* Assert display enable LCD_DISP pin */
  GPIO_WriteBit(LCD_DISP_GPIO_PORT, LCD_DISP_PIN, Bit_SET);

  /* Assert backlight LCD_BL_CTRL pin */
  GPIO_WriteBit(LCD_BL_CTRL_GPIO_PORT, LCD_BL_CTRL_PIN, Bit_RESET);
    
  /* Initialize the font */
  BSP_LCD_SetFont(&LCD_DEFAULT_FONT);
  
  return LCD_OK;
}

uint32_t BSP_LCD_GetXSize(void)
{
  //return hLtdcHandler.LayerCfg[ActiveLayer].ImageWidth;
  return hLtdcHandler.ImageWidth[ActiveLayer];
}

uint32_t BSP_LCD_GetYSize(void)
{
  //return hLtdcHandler.LayerCfg[ActiveLayer].ImageHeight;
  return hLtdcHandler.ImageHeight[ActiveLayer];
}

uint32_t BSP_LCD_ReadPixel(uint16_t Xpos, uint16_t Ypos)
{
  uint32_t ret = 0;
  
  if(hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_ARGB8888)
  {
    /* Read data value from SDRAM memory */
    ret = *(__IO uint32_t*) (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (2*(Ypos*BSP_LCD_GetXSize() + Xpos)));
  }
  else if(hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_RGB888)
  {
    /* Read data value from SDRAM memory */
    ret = (*(__IO uint32_t*) (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (2*(Ypos*BSP_LCD_GetXSize() + Xpos))) & 0x00FFFFFF);
  }
  else if((hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_RGB565) || \
          (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_ARGB4444) || \
          (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_AL88))  
  {
    /* Read data value from SDRAM memory */
    ret = *(__IO uint16_t*) (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (2*(Ypos*BSP_LCD_GetXSize() + Xpos)));    
  }
  else
  {
    /* Read data value from SDRAM memory */
    ret = *(__IO uint8_t*) (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (2*(Ypos*BSP_LCD_GetXSize() + Xpos)));    
  }
  
  return ret;
}

void BSP_LCD_DrawHLine(uint16_t Xpos, uint16_t Ypos, uint16_t Length)
{
  uint32_t  Xaddress = 0;
  
  /* Get the line address */
  if(hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_RGB565)
  { /* RGB565 format */
    Xaddress = (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress) + 2*(BSP_LCD_GetXSize()*Ypos + Xpos);
  }
  else
  { /* ARGB8888 format */
    Xaddress = (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress) + 4*(BSP_LCD_GetXSize()*Ypos + Xpos);
  }
  
  /* Write line */
  LL_FillBuffer(ActiveLayer, (uint32_t *)Xaddress, Length, 1, 0, DrawProp[ActiveLayer].TextColor);
}

void BSP_LCD_DrawVLine(uint16_t Xpos, uint16_t Ypos, uint16_t Length)
{
  uint32_t  Xaddress = 0;
  
  /* Get the line address */
  if(hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_RGB565)
  { /* RGB565 format */
    Xaddress = (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress) + 2*(BSP_LCD_GetXSize()*Ypos + Xpos);
  }
  else
  { /* ARGB8888 format */
    Xaddress = (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress) + 4*(BSP_LCD_GetXSize()*Ypos + Xpos);
  }
  
  /* Write line */
  LL_FillBuffer(ActiveLayer, (uint32_t *)Xaddress, 1, Length, (BSP_LCD_GetXSize() - 1), DrawProp[ActiveLayer].TextColor);
}

void BSP_LCD_DrawPixel(uint16_t Xpos, uint16_t Ypos, uint32_t RGB_Code)
{
  /* Write data value to all SDRAM memory */
  if(hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_PixelFormat == LTDC_Pixelformat_RGB565)
  { /* RGB565 format */
    *(__IO uint16_t*) (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (2*(Ypos*BSP_LCD_GetXSize() + Xpos))) = (uint16_t)RGB_Code;
  }
  else
  { /* ARGB8888 format */
    *(__IO uint32_t*) (hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (4*(Ypos*BSP_LCD_GetXSize() + Xpos))) = RGB_Code;
  }
}

void BSP_LCD_DrawBitmap(uint32_t Xpos, uint32_t Ypos, uint8_t *pbmp)
{
  uint32_t index = 0, width = 0, height = 0, bit_pixel = 0;
  uint32_t address;
  uint32_t input_color_mode = 0;
  
  /* Get bitmap data address offset */
  index = *(__IO uint16_t *) (pbmp + 10);
  index |= (*(__IO uint16_t *) (pbmp + 12)) << 16;
  
  /* Read bitmap width */
  width = *(uint16_t *) (pbmp + 18);
  width |= (*(uint16_t *) (pbmp + 20)) << 16;
  
  /* Read bitmap height */
  height = *(uint16_t *) (pbmp + 22);
  height |= (*(uint16_t *) (pbmp + 24)) << 16; 
  
  /* Read bit/pixel */
  bit_pixel = *(uint16_t *) (pbmp + 28);   
  
  /* Set the address */
  address = hLtdcHandler.LTDC_Layer_InitStruct[ActiveLayer].LTDC_CFBStartAdress + (((BSP_LCD_GetXSize()*Ypos) + Xpos)*(4));
  
  /* Get the layer pixel format */    
  if ((bit_pixel/8) == 4)
  {
    input_color_mode = CM_ARGB8888;
  }
  else if ((bit_pixel/8) == 2)
  {
    input_color_mode = CM_RGB565;   
  }
  else 
  {
    input_color_mode = CM_RGB888;
  }
  
  /* Bypass the bitmap header */
  pbmp += (index + (width * (height - 1) * (bit_pixel/8)));  
  
  /* Convert picture to ARGB8888 pixel format */
  for(index=0; index < height; index++)
  {
    /* Pixel format conversion */
    LL_ConvertLineToARGB8888((uint32_t *)pbmp, (uint32_t *)address, width, input_color_mode);
    
    /* Increment the source and destination buffers */
    address+=  (BSP_LCD_GetXSize()*4);
    pbmp -= width*(bit_pixel/8);
  } 
}

void BSP_LCD_FillPolygon(pPoint Points, uint16_t PointCount)
{
  int16_t X = 0, Y = 0, X2 = 0, Y2 = 0, X_center = 0, Y_center = 0, X_first = 0, Y_first = 0, pixelX = 0, pixelY = 0, counter = 0;
  uint16_t  image_left = 0, image_right = 0, image_top = 0, image_bottom = 0;
  
  image_left = image_right = Points->X;
  image_top= image_bottom = Points->Y;
  
  for(counter = 1; counter < PointCount; counter++)
  {
    pixelX = POLY_X(counter);
    if(pixelX < image_left)
    {
      image_left = pixelX;
    }
    if(pixelX > image_right)
    {
      image_right = pixelX;
    }
    
    pixelY = POLY_Y(counter);
    if(pixelY < image_top)
    { 
      image_top = pixelY;
    }
    if(pixelY > image_bottom)
    {
      image_bottom = pixelY;
    }
  }  
  
  if(PointCount < 2)
  {
    return;
  }
  
  X_center = (image_left + image_right)/2;
  Y_center = (image_bottom + image_top)/2;
  
  X_first = Points->X;
  Y_first = Points->Y;
  
  while(--PointCount)
  {
    X = Points->X;
    Y = Points->Y;
    Points++;
    X2 = Points->X;
    Y2 = Points->Y;    
    
    FillTriangle(X, X2, X_center, Y, Y2, Y_center);
    FillTriangle(X, X_center, X2, Y, Y_center, Y2);
    FillTriangle(X_center, X2, X, Y_center, Y2, Y);   
  }
  
  FillTriangle(X_first, X2, X_center, Y_first, Y2, Y_center);
  FillTriangle(X_first, X_center, X2, Y_first, Y_center, Y2);
  FillTriangle(X_center, X2, X_first, Y_center, Y2, Y_first);   
}

void BSP_LCD_DisplayOn(void)
{
  /* Display On */
  LTDC_ReloadConfig(LTDC_IMReload);
  LTDC_Cmd(ENABLE);
  GPIO_WriteBit(LCD_DISP_GPIO_PORT, LCD_DISP_PIN, Bit_SET);        /* Assert LCD_DISP pin */
  GPIO_WriteBit(LCD_BL_CTRL_GPIO_PORT, LCD_BL_CTRL_PIN, Bit_SET);  /* Assert LCD_BL_CTRL pin */
}

void BSP_LCD_DisplayOff(void)
{
  /* Display Off */
  LTDC_Cmd(DISABLE);
  GPIO_WriteBit(LCD_DISP_GPIO_PORT, LCD_DISP_PIN, Bit_RESET);      /* De-assert LCD_DISP pin */
  GPIO_WriteBit(LCD_BL_CTRL_GPIO_PORT, LCD_BL_CTRL_PIN, Bit_RESET);/* De-assert LCD_BL_CTRL pin */
}

__weak void BSP_LCD_MspInit(LTDC_HandleTypeDef *hltdc, void *Params)
{
  GPIO_InitTypeDef GPIO_InitStruct;
  
  /* Enable GPIOI, GPIOJ, GPIOK, GPIOE, GPIOG AHB Clocks */
  RCC_AHB1PeriphClockCmd( RCC_AHB1Periph_GPIOE | RCC_AHB1Periph_GPIOG | \
                          RCC_AHB1Periph_GPIOI | RCC_AHB1Periph_GPIOJ | \
                          RCC_AHB1Periph_GPIOK, ENABLE);
  LCD_DISP_GPIO_CLK_ENABLE();
  LCD_BL_CTRL_GPIO_CLK_ENABLE();
  /* GPIOs Configuration */
  /*
  +------------------------+-----------------------+----------------------------+
  +                       LCD pins assignment                                   +
  +------------------------+-----------------------+----------------------------+
  |  LCD_TFT R0 <-> PI.15  |  LCD_TFT G0 <-> PJ.07 |  LCD_TFT B0 <-> PE.04      |
  |  LCD_TFT R1 <-> PJ.00  |  LCD_TFT G1 <-> PJ.08 |  LCD_TFT B1 <-> PJ.13      |
  |  LCD_TFT R2 <-> PJ.01  |  LCD_TFT G2 <-> PJ.09 |  LCD_TFT B2 <-> PJ.14      |
  |  LCD_TFT R3 <-> PJ.02  |  LCD_TFT G3 <-> PJ.10 |  LCD_TFT B3 <-> PJ.15      |
  |  LCD_TFT R4 <-> PJ.03  |  LCD_TFT G4 <-> PJ.11 |  LCD_TFT B4 <-> PG.12      |
  |  LCD_TFT R5 <-> PJ.04  |  LCD_TFT G5 <-> PK.00 |  LCD_TFT B5 <-> PK.04      |
  |  LCD_TFT R6 <-> PJ.05  |  LCD_TFT G6 <-> PK.01 |  LCD_TFT B6 <-> PK.05      |
  |  LCD_TFT R7 <-> PJ.06  |  LCD_TFT G7 <-> PK.02 |  LCD_TFT B7 <-> PK.06      |
  -------------------------------------------------------------------------------
  |  LCD_TFT HSYNC <-> PI.10  | LCDTFT VSYNC <->  PI.09 |
  |  LCD_TFT CLK   <-> PI.14  | LCD_TFT DE   <->  PK.07 |
  -----------------------------------------------------
  |  LCD_TFT DISP  <-> PI.12  | LCD_TFT BL   <->  PK.03 |
  -----------------------------------------------------
  
  */
  
  /* GPIOE configuration */
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource4, GPIO_AF14_LTDC);
  
  GPIO_InitStruct.GPIO_Pin = GPIO_Pin_4; 
  GPIO_InitStruct.GPIO_Speed = GPIO_Fast_Speed;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(GPIOE, &GPIO_InitStruct);
  
  /* GPIOG configuration */
  GPIO_PinAFConfig(GPIOG, GPIO_PinSource12, GPIO_AF9_LTDC);
  
  GPIO_InitStruct.GPIO_Pin = GPIO_Pin_12; 
  GPIO_Init(GPIOG, &GPIO_InitStruct);
  
  /* GPIOI configuration */
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource8, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource9, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource10, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource13, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource14, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource15, GPIO_AF14_LTDC);
  
  GPIO_InitStruct.GPIO_Pin = GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | \
                              GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15; 
  GPIO_Init(GPIOI, &GPIO_InitStruct);
  
  /* GPIOJ configuration */
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource0, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource1, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource2, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource3, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource4, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource5, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource6, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource7, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource8, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource9, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource10, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource11, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource13, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource14, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOJ, GPIO_PinSource15, GPIO_AF14_LTDC);
  
  GPIO_InitStruct.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3 | \
                              GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7 | \
                              GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11 | \
                              GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15; 
  GPIO_Init(GPIOJ, &GPIO_InitStruct);
  
  /* GPIOK configuration */
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource0, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource1, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource2, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource4, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource5, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource6, GPIO_AF14_LTDC);
  GPIO_PinAFConfig(GPIOK, GPIO_PinSource7, GPIO_AF14_LTDC);
  
  GPIO_InitStruct.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_4 | \
                              GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7; 
  GPIO_Init(GPIOK, &GPIO_InitStruct);
  
  /* LCD_DISP configuration */
  GPIO_InitStruct.GPIO_Pin = LCD_DISP_PIN; 
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(LCD_DISP_GPIO_PORT, &GPIO_InitStruct);
  
  /* LCD_BL configuration */
  GPIO_InitStruct.GPIO_Pin = LCD_BL_CTRL_PIN; 
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(LCD_BL_CTRL_GPIO_PORT, &GPIO_InitStruct);
}

__weak void BSP_LCD_MspDeInit(LTDC_HandleTypeDef *hltdc, void *Params)
{
  GPIO_InitTypeDef GPIO_InitStruct;

  /* Disable LTDC block */
  LTDC_Cmd(DISABLE);

  /* LTDC Pins deactivation */

  /* GPIOE deactivation */
  GPIO_InitStruct.GPIO_Pin       = GPIO_Pin_4;
  GPIO_InitStruct.GPIO_Mode      = GPIO_Mode_IN;
  GPIO_InitStruct.GPIO_OType     = GPIO_OType_OD;
  GPIO_InitStruct.GPIO_PuPd      = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed     = GPIO_Low_Speed;
  GPIO_Init(GPIOE, &GPIO_InitStruct);

  /* GPIOG deactivation */
  GPIO_InitStruct.GPIO_Pin       = GPIO_Pin_12;
  GPIO_Init(GPIOG, &GPIO_InitStruct);

  /* GPIOI deactivation */
  GPIO_InitStruct.GPIO_Pin       = GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_12 | \
                                  GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15;
  GPIO_Init(GPIOI, &GPIO_InitStruct);

  /* GPIOJ deactivation */
  GPIO_InitStruct.GPIO_Pin       = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3 | \
                                  GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7 | \
                                  GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11 | \
                                  GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15;
  GPIO_Init(GPIOJ, &GPIO_InitStruct);

  /* GPIOK deactivation */
  GPIO_InitStruct.GPIO_Pin       = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_4 | \
                                  GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7;
  GPIO_Init(GPIOK, &GPIO_InitStruct);

  /* Disable LTDC clock */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_LTDC, DISABLE);

  /* GPIO pins clock can be shut down in the application
     by surcharging this __weak function */
}
